Fix alignment issues

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ ul {
     gap:50px;
     margin-left:250px;
     margin-right:250px;
+    align-items:center;
     justify-content:center;
     padding-bottom: 100px;
 }
